fixed spacing above anchors when clicking threw nav

--- a/style/styles.css
+++ b/style/styles.css
@@ -32,12 +32,12 @@ header {
     margin: auto;
 }
 
-.nav-anchor::before {
+:target::before {
     content: "";
     display: block;
-    height: 59px;
-    margin: -59px 0 0;
-}
+    height: 59px; /* fixed header height*/
+    margin: -59wpx 0 0; /* negative fixed header height */
+  }
 
 /* ////////////////NAVIGARTION/////////////// */
 
@@ -183,7 +183,7 @@ h2 {
 
 /* ////////////////TOP AND BOTTOM PADDING SECTIONS/////////////// */
 
-#about, #why-us, #testimonials, #contact{
+#about, #why-us, #testimonials, #contact, #auto-repair, #marine-detailing{
     padding: 40px 0;
 }
 
@@ -204,7 +204,7 @@ h2 {
 /* ////////////////WHY US/////////////// */
 
 #why-us {
-    background: #d9d9d9;
+    background: #cccccc;
 }
 
 h3 {
@@ -224,6 +224,16 @@ h2 span {
 .why-us-content-section img {
     border-radius: 100%;
 }
+
+/* ////////////////AUTO REPAIR/////////////// */
+
+#auto-repair {
+background: #d9d9d9;
+}
+
+/* ////////////////MARINE DETAILING/////////////// */
+
+
 
 /* ////////////////TESTIMONIAL/////////////// */
 
